# Text

./: .gitignore  Architecture.drawio  README.md
Database/: Dockerfile  Main.sql  pg_hba.conf  postgresql.conf
Docker/: docker-compose.yml
backend/: API.sln
backend python/: Dockerfile  Queue.py  Request.py  Response.py  app.py  main.py  pyproject.toml  pyvenv.cfg
backend/AIModelReceiverService/: AIModelReceiverService.csproj  Dockerfile  FrontendReceiver.cs  Program.cs  appsettings.json
backend/AIModelReceiverService/Properties/: launchSettings.json
backend/AIModelSenderSerice/: AIModelSenderSerice.csproj  CustomUserIdProvider.cs  Dockerfile  FrontendSender.cs  Program.cs  Worker.cs  appsettings.json
backend/AIModelSenderSerice/Properties/: launchSettings.json
backend/ConsoleApp1/: Class1.cs  ConsoleApp1.csproj  Program.cs
backend/MainAPI/: Dockerfile  MainAPI.csproj  Program.cs  appsettings.json
backend/MainAPI/Controllers/: AuthController.cs  UserController.cs
backend/MainAPI/Properties/: launchSettings.json
backend/MainAPI/Services/: CacheService.cs  EmailService.cs
backend/SharedModels/: SharedModels.csproj
backend/SharedModels/Dtos/: ChatCreateDto.cs  ChatReadDto.cs  ChatReadSimpleDto.cs  ChatUpdateDto.cs  MessageCreateDto.cs  MessageReadDto.cs  UserCreateDto.cs  UserReadSimpleDto.cs  UserReadSimpleSto.cs  UserUpdateDto.cs
backend/SharedModels/Helpers/: JwtHelper.cs  MessageHub.cs  (+1 more)
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: ApiService.js  App.vue  main.js
(+38 files in other folders)
