[tool.poetry]
name = "textsummary"
version = "0.1.0"
description = ""
authors = ["Andrii Krechuniak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.1.0"
py7zr = "^0.22.0"
pandas = "^2.2.3"
nltk = "^3.9.1"
torch = "^2.5.1"
transformers = {extras = ["torch"], version = "^4.46.3"}
sentencepiece = "^0.2.0"
cachetools = "^5.5.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
